src/test/deca/context/valid/provided/ContextSansObjet/Identification/IdentificationSansAffectation.deca
//Description:
//  Déclaration de variables de tout type sans affectation
//
//Résultat:
// ok

{
    int x;
    float y;
    boolean a;
}
