src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/NotFloat.deca
//Description:
//  Vérification contextuelle de l'opérateur ! sur un type float
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type boolean attendu

{
   !3.0;
}